package ar.edu.utn.frba.dds;

public class Contribuyente extends Visitante {
    public String nombre;
    public String apellido;
    public Integer edad; // podría ser una función que itere con la fecha de nacimiento
}
