package ar.edu.utn.frba.dds;

public enum Estado {
    pendiente,
    aceptada,
    rechazada
}
