package ar.edu.utn.frba.dds;

public enum Origen {
  cargaManual,
  dataset,
  contribuyente
}
