package ar.edu.utn.frba.dds;

public abstract class Visitante {
}
